<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="textEnd"
        android:textColor="#3949AB"
        android:textSize="16sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnAddUpdate"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btnAdd"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnViewBooks"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btnVIewBooks"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnBorrow"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btnBorrow"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnReadingTracker"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btnReading"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnViewProfile"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btnviewProfile"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCheckmsg"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btnmsgcheck"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btnLogout"
        android:textSize="20sp" />

</LinearLayout>