<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/txtLogin"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/txtUserLog"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/hintUsername"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btnLogin"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCreateAcc"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/btnCreateAccount"
        android:textSize="18sp" />
</LinearLayout>