<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register" >

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/txtContentImages"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="0dp"
        android:text="@string/hintAddess"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtPastalCode1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/hintEmail"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtEmail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtAge"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtAge1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbInterest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtInterest"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtInterest1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbPostalCode5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/txtPassword"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnChangeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btnChangeProfile" />

    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPrevious" />
</LinearLayout>