<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingBook">

    <TextView
        android:id="@+id/txtBookTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtAddingbook"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBookName"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/txtBooktitle"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBookTracker"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtbookImageName"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/bookImgName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtPageNum"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/txtAuthor"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBookName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/txtPublisher"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPageNum"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/chkShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="260dp"
        android:text="@string/lblShare"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbookImageName" />

    <CheckBox
        android:id="@+id/chkRent"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:text="@string/lblRent"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtRentPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkShare" />

    <CheckBox
        android:id="@+id/chkGiveaway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="215dp"
        android:text="@string/lblgiveaway"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkRent" />

    <Button
        android:id="@+id/btnCancelSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btnCancel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="114dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btnAddBook"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancelSub" />

    <EditText
        android:id="@+id/txtRentPrice"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="52dp"
        android:enabled="false"
        android:ems="10"
        android:hint="@string/rentPrice"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chkRent"
        app:layout_constraintTop_toBottomOf="@+id/txtbookImageName" />

    <EditText
        android:id="@+id/txtPublicationYear"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/txtPulication"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

</androidx.constraintlayout.widget.ConstraintLayout>